--- a/src/view/MonAnManager.fxml
+++ b/src/view/MonAnManager.fxml
@@ -17,136 +17,106 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171"
-	layoutX="300.0" prefHeight="696.0" prefWidth="973.0"
-	AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0"
-	AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:controller="controller.MonAnManagerController">
+<AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonAnManagerController">
 	<children>
-		<GridPane layoutX="29.0" prefHeight="449.0" prefWidth="915.0"
-			AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0"
-			AnchorPane.rightAnchor="30.0">
+		<GridPane layoutX="29.0" prefHeight="449.0" prefWidth="915.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints maxHeight="229.0" minHeight="10.0"
-					prefHeight="55.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="420.0" minHeight="10.0"
-					prefHeight="391.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="229.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="391.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<TableView fx:id="danhSachMonAn" prefHeight="378.0"
-					prefWidth="915.0" stylesheets="@../css/style-left.css"
-					GridPane.rowIndex="1">
+				<TableView fx:id="danhSachMonAn" onMousePressed="#chooseMonAn" prefHeight="378.0" prefWidth="915.0" stylesheets="@../css/style-left.css" GridPane.rowIndex="1">
 					<columns>
-						<TableColumn fx:id="hinhAnhColumn" prefWidth="169.0"
-							text="Hình ảnh" />
-						<TableColumn fx:id="idColumn" prefWidth="85.0"
-							text="Id" />
-						<TableColumn fx:id="tenMonAnColumn" prefWidth="152.0"
-							text="Tên" />
-						<TableColumn fx:id="moTaColumn" prefWidth="284.0"
-							text="Mô tả" />
-						<TableColumn fx:id="soLuongNguoiColumn"
-							prefWidth="77.0" text="Số lượng" />
-						<TableColumn fx:id="giaTienColumn" prefWidth="150.0"
-							text="Giá tiền" />
+						<TableColumn fx:id="hinhAnhColumn" prefWidth="125.0" text="Hình ảnh" />
+						<TableColumn fx:id="idColumn" prefWidth="88.0" text="Id" />
+						<TableColumn fx:id="tenMonAnColumn" prefWidth="146.0" text="Tên" />
+						<TableColumn fx:id="moTaColumn" prefWidth="236.0" text="Mô tả" />
+						<TableColumn fx:id="soLuongNguoiColumn" prefWidth="86.0" text="Số lượng" />
+						<TableColumn fx:id="giaTienColumn" prefWidth="140.0" text="Giá tiền" />
+                  <TableColumn fx:id="huyMAColumn" prefWidth="90.0" text="Hủy" />
 					</columns>
 				</TableView>
-				<HBox alignment="CENTER_LEFT" prefHeight="100.0"
-					prefWidth="200.0" spacing="15.0" GridPane.halignment="CENTER">
+				<HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" GridPane.halignment="CENTER">
 					<children>
-						<FontAwesomeIconView fill="#473159"
-							glyphName="SEARCH" size="23">
+						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
 							<HBox.margin>
 								<Insets left="10.0" />
 							</HBox.margin>
 						</FontAwesomeIconView>
-						<TextField prefHeight="39.0" prefWidth="418.0"
-							style="-fx-border-color: #3156DD;">
+						<TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
 							<font>
 								<Font size="18.0" />
 							</font>
 						</TextField>
-						<ComboBox prefHeight="39.0" prefWidth="195.0"
-							style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
-						<Button fx:id="btnThemMonAn" mnemonicParsing="false"
-							onAction="#themMonAn" prefHeight="39.0" prefWidth="213.0"
-							style="-fx-background-color: #3F2B63;" text="Thêm món ăn"
-							textFill="WHITE">
+						<ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
+						<Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Thêm món ăn" textFill="WHITE">
 							<font>
 								<Font size="18.0" />
 							</font>
 							<graphic>
-								<FontAwesomeIconView fill="#f8f8f8"
-									glyphName="PLUS" size="23" />
+								<FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
 							</graphic>
 						</Button>
+                  <Button fx:id="btnSuaMonAn" mnemonicParsing="false" onAction="#suaMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Sửa món ăn" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <graphic>
+                        <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
+                     </graphic>
+                  </Button>
 					</children>
 				</HBox>
 			</children>
 		</GridPane>
-		<Pane prefHeight="215.0" prefWidth="973.0"
-			style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0"
-			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
-				<ImageView fx:id="imvHinhAnhMA" fitHeight="150.0"
-					fitWidth="200.0" layoutX="30.0" layoutY="33.0"
-					onMouseClicked="#chooseImage" pickOnBounds="true"
-					preserveRatio="true">
+				<ImageView fx:id="imvHinhAnhMA" fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
 					<image>
-						<Image
-							url="@../images/icon-food-and-drink-hd-png-download.png" />
+						<Image url="@../images/icon-food-and-drink-hd-png-download.png" />
 					</image>
 				</ImageView>
-				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0"
-					prefWidth="118.0" text="Tên món ăn:" textFill="WHITE">
+				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Tên món ăn:" textFill="WHITE">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Label>
-				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0"
-					prefWidth="133.0" text="Số lượng người:" textFill="WHITE">
+				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng người:" textFill="WHITE">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Label>
-				<Label layoutX="267.0" layoutY="126.0" prefHeight="27.0"
-					prefWidth="108.0" text="Mô tả:" textFill="WHITE">
+				<Label layoutX="267.0" layoutY="126.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Label>
-				<TextField fx:id="txtTenMonAn" layoutX="377.0"
-					layoutY="30.0" prefHeight="39.0" prefWidth="563.0">
+				<TextField fx:id="txtTenMonAn" layoutX="377.0" layoutY="30.0" prefHeight="39.0" prefWidth="563.0">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</TextField>
-				<TextField fx:id="txtSoLuongNguoiMA" layoutX="405.0"
-					layoutY="79.0" prefHeight="39.0" prefWidth="64.0">
+				<TextField fx:id="txtSoLuongNguoiMA" layoutX="405.0" layoutY="79.0" prefHeight="39.0" prefWidth="64.0">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</TextField>
-				<TextField fx:id="txtGiaTienMA" layoutX="592.0"
-					layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
+				<TextField fx:id="txtGiaTienMA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</TextField>
-				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0"
-					prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
+				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
 					<font>
 						<Font size="18.0" />
 					</font>
 				</Label>
-				<TextArea fx:id="txtMoTaMA" layoutX="334.0" layoutY="129.0"
-					prefHeight="77.0" prefWidth="606.0">
+				<TextArea fx:id="txtMoTaMA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
 					<font>
 						<Font size="18.0" />
 					</font>
@@ -155,4 +125,3 @@
 		</Pane>
 	</children>
 </AnchorPane>
-
