--- a/src/view/BanAnManager.fxml
+++ b/src/view/BanAnManager.fxml
@@ -5,43 +5,78 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanAnManagerController">
 	<children>
-		<GridPane layoutX="29.0" prefHeight="449.0" prefWidth="915.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints maxHeight="229.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="391.0" vgrow="SOMETIMES" />
-			</rowConstraints>
+		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
-				<TableView fx:id="danhSachBanAn" onMousePressed="#chooseBanAn" prefHeight="378.0" prefWidth="915.0" stylesheets="@../css/style-left.css" GridPane.rowIndex="1">
-					<columns>
-						<TableColumn fx:id="hinhAnhColumn" prefWidth="162.0" text="Hình ảnh" />
-						<TableColumn fx:id="idColumn" minWidth="0.0" prefWidth="72.0" text="Id" />
-						<TableColumn fx:id="kySoBAColumn" prefWidth="94.0" text="Ký số bàn" />
-						<TableColumn fx:id="moTaColumn" prefWidth="300.0" text="Mô tả" />
-						<TableColumn fx:id="soLuongNguoiColumn" prefWidth="85.0" text="Số lượng" />
-						<TableColumn fx:id="giaTienColumn" prefWidth="101.0" text="Giá tiền" />
-						<TableColumn fx:id="huyBAColumn" minWidth="0.0" prefWidth="98.0" text="Hủy" />
-					</columns>
-				</TableView>
-				<HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" GridPane.halignment="CENTER">
+				<ImageView fx:id="imvHinhAnhBA" fitHeight="165.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
+					<image>
+						<Image url="@../images/table-view.png" />
+					</image>
+				</ImageView>
+				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Ký số bàn ăn:" textFill="WHITE">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Label>
+				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng ghế:" textFill="WHITE">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Label>
+				<Label layoutX="265.0" layoutY="129.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Label>
+				<TextField fx:id="txtKySoBanAn" layoutX="385.0" layoutY="30.0" prefHeight="39.0" prefWidth="555.0">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</TextField>
+				<TextField fx:id="txtSoLuongGheBA" layoutX="385.0" layoutY="79.0" prefHeight="39.0" prefWidth="84.0">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</TextField>
+				<TextField fx:id="txtGiaTienBA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</TextField>
+				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Label>
+				<TextArea fx:id="txtMoTaBA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</TextArea>
+			</children>
+		</Pane>
+      <ScrollPane fitToWidth="true" layoutY="280.0" prefHeight="417.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="279.0">
+         <content>
+            <FlowPane fx:id="dsBanAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="415.0" prefWidth="971.0" vgap="20.0">
+               <padding>
+                  <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+               </padding>
+            </FlowPane>
+         </content>
+      </ScrollPane>
+				<HBox alignment="CENTER_LEFT" layoutY="215.0" prefHeight="64.0" prefWidth="973.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
 					<children>
 						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
 							<HBox.margin>
@@ -72,56 +107,5 @@
 		                  </Button>
 					</children>
 				</HBox>
-			</children>
-		</GridPane>
-		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<children>
-				<ImageView fx:id="imvHinhAnhBA" fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
-					<image>
-						<Image url="@../images/icon-food-and-drink-hd-png-download.png" />
-					</image>
-				</ImageView>
-				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Ký số bàn ăn:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng ghế:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="129.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextField fx:id="txtKySoBanAn" layoutX="385.0" layoutY="30.0" prefHeight="39.0" prefWidth="555.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtSoLuongNguoiBA" layoutX="385.0" layoutY="79.0" prefHeight="39.0" prefWidth="84.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtGiaTienBA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextArea fx:id="txtMoTaBA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextArea>
-			</children>
-		</Pane>
 	</children>
 </AnchorPane>
