--- a/src/view/MonAnManager.fxml
+++ b/src/view/MonAnManager.fxml
@@ -5,80 +5,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonAnManagerController">
 	<children>
-		<GridPane layoutX="29.0" prefHeight="449.0" prefWidth="915.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints maxHeight="229.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="391.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<TableView fx:id="danhSachMonAn" onMousePressed="#chooseMonAn" prefHeight="378.0" prefWidth="915.0" stylesheets="@../css/style-left.css" GridPane.rowIndex="1">
-					<columns>
-						<TableColumn fx:id="hinhAnhColumn" prefWidth="125.0" text="Hình ảnh" />
-						<TableColumn fx:id="idColumn" prefWidth="88.0" text="Id" />
-						<TableColumn fx:id="tenMonAnColumn" prefWidth="146.0" text="Tên" />
-						<TableColumn fx:id="moTaColumn" prefWidth="236.0" text="Mô tả" />
-						<TableColumn fx:id="soLuongNguoiColumn" prefWidth="86.0" text="Số lượng" />
-						<TableColumn fx:id="giaTienColumn" prefWidth="140.0" text="Giá tiền" />
-                  <TableColumn fx:id="huyMAColumn" prefWidth="90.0" text="Hủy" />
-					</columns>
-				</TableView>
-				<HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" GridPane.halignment="CENTER">
-					<children>
-						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
-							<HBox.margin>
-								<Insets left="10.0" />
-							</HBox.margin>
-						</FontAwesomeIconView>
-						<TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
-							<font>
-								<Font size="18.0" />
-							</font>
-						</TextField>
-						<ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
-						<Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Thêm món ăn" textFill="WHITE">
-							<font>
-								<Font size="18.0" />
-							</font>
-							<graphic>
-								<FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
-							</graphic>
-						</Button>
-                  <Button fx:id="btnSuaMonAn" mnemonicParsing="false" onAction="#suaMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Sửa món ăn" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <graphic>
-                        <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
-                     </graphic>
-                  </Button>
-					</children>
-				</HBox>
-			</children>
-		</GridPane>
 		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
-				<ImageView fx:id="imvHinhAnhMA" fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
+				<ImageView fx:id="imvHinhAnhMA" fitHeight="165.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
 					<image>
-						<Image url="@../images/icon-food-and-drink-hd-png-download.png" />
+						<Image url="@../images/food-view.png" />
 					</image>
 				</ImageView>
 				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Tên món ăn:" textFill="WHITE">
@@ -123,5 +67,44 @@
 				</TextArea>
 			</children>
 		</Pane>
+				<HBox alignment="CENTER_LEFT" layoutY="212.0" prefHeight="84.0" prefWidth="973.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+					<children>
+						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
+							<HBox.margin>
+								<Insets left="10.0" />
+							</HBox.margin>
+						</FontAwesomeIconView>
+						<TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
+							<font>
+								<Font size="18.0" />
+							</font>
+						</TextField>
+						<ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
+						<Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Thêm món ăn" textFill="WHITE">
+							<font>
+								<Font size="18.0" />
+							</font>
+							<graphic>
+								<FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
+							</graphic>
+						</Button>
+            <Button fx:id="btnSuaMonAn" mnemonicParsing="false" onAction="#suaMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Sửa món ăn" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
+               </graphic>
+            </Button>
+					</children>
+				</HBox>
+      <ScrollPane fitToWidth="true" layoutY="296.0" prefHeight="400.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="296.0">
+         <content>
+            <FlowPane fx:id="dsMonAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="457.0" prefWidth="973.0" vgap="10.0">
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding></FlowPane>
+         </content>
+      </ScrollPane>
 	</children>
 </AnchorPane>
