--- a/src/view/BanDatManager.fxml
+++ b/src/view/BanDatManager.fxml
@@ -1,70 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanDatManagerController">
 	<children>
-		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<children>
-				<ImageView fx:id="imvHinhAnhMA" fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
-					<image>
-						<Image url="@../images/icon-food-and-drink-hd-png-download.png" />
-					</image>
-				</ImageView>
-				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Tên bàn đặt:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng người:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="267.0" layoutY="126.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextField fx:id="txtTenMonAn" layoutX="377.0" layoutY="30.0" prefHeight="39.0" prefWidth="563.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtSoLuongNguoiMA" layoutX="405.0" layoutY="79.0" prefHeight="39.0" prefWidth="64.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtGiaTienMA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextArea fx:id="txtMoTaMA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextArea>
-			</children>
+		<Pane prefHeight="84.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="973.0" spacing="15.0">
+               <children>
+                  <FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </FontAwesomeIconView>
+                  <TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
+               </children>
+            </HBox>
+         </children>
 		</Pane>
-      <ScrollPane layoutY="215.0" prefHeight="481.0" prefWidth="973.0">
+      <ScrollPane fitToWidth="true" layoutY="115.0" prefHeight="581.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="115.0">
          <content>
-            <VBox fx:id="danhSachBanDat" prefHeight="479.0" prefWidth="971.0" />
+            <TilePane fx:id="dsBanDat" alignment="TOP_CENTER" hgap="30.0" prefHeight="579.0" prefWidth="971.0" vgap="30.0">
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </TilePane>
          </content>
       </ScrollPane>
 	</children>
