--- a/src/view/HomeManager.fxml
+++ b/src/view/HomeManager.fxml
@@ -66,6 +66,17 @@
                   <Font size="20.0" />
                </font>
             </Button>
+            <Button fx:id="btnSignOut" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#signOut" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Đăng xuất" textFill="WHITE">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="32" />
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
       <fx:include fx:id="banDat" source="BanDatManager.fxml" />
