--- a/src/view/HomeManager.fxml
+++ b/src/view/HomeManager.fxml
@@ -69,6 +69,18 @@
                   <Font size="20.0" />
                </font>
             </Button>
+            
+            <Button fx:id="btnDatBanKhachVangLai" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#datBanKhachVangLai" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Đặt bàn cho khách vãng lai" textFill="WHITE" wrapText="true">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" size="32" />
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
             <Button fx:id="btnSignOut" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#signOut" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Đăng xuất" textFill="WHITE">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="32" />
