--- a/src/view/BanDatManager.fxml
+++ b/src/view/BanDatManager.fxml
@@ -2,44 +2,86 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanDatManagerController">
+<AnchorPane layoutX="0.0" prefHeight="718.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanDatManagerController">
 	<children>
-		<Pane prefHeight="84.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="973.0" spacing="15.0">
+      <SplitPane dividerPositions="0.29797979797979796" prefHeight="718.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane maxWidth="512.0" minWidth="256.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #7156DD;">
                <children>
-                  <FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </FontAwesomeIconView>
-                  <TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
+                  <TextField layoutX="10.0" layoutY="155.0" prefHeight="41.0" prefWidth="274.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
+                  <TilePane alignment="CENTER" layoutY="410.0" prefHeight="39.0" prefWidth="301.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
+                           <graphic>
+                              <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
+                           </graphic>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </TilePane>
+                  <Label layoutX="12.0" layoutY="36.0" prefHeight="27.0" prefWidth="93.0" text="Ngày đặt" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="123.0" text="Tên khách hàng" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="214.0" text="CMND" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="305.0" text="Số điện thoại" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <DatePicker layoutX="11.0" layoutY="69.0" prefHeight="41.0" prefWidth="242.0" />
+                  <TextField layoutX="10.0" layoutY="247.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField layoutX="10.0" layoutY="338.0" prefHeight="39.0" prefWidth="274.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
                </children>
-            </HBox>
-         </children>
-		</Pane>
-      <ScrollPane fitToWidth="true" layoutY="115.0" prefHeight="581.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="115.0">
-         <content>
-            <TilePane fx:id="dsBanDat" alignment="TOP_CENTER" hgap="30.0" prefHeight="579.0" prefWidth="971.0" vgap="30.0">
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding>
-            </TilePane>
-         </content>
-      </ScrollPane>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ScrollPane fitToWidth="true" prefHeight="581.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <TilePane fx:id="dsBanDat" alignment="TOP_CENTER" hgap="30.0" prefHeight="714.0" prefWidth="711.0" vgap="30.0">
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                        </TilePane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
 	</children>
 </AnchorPane>
