--- a/src/view/HomeManager.fxml
+++ b/src/view/HomeManager.fxml
@@ -1,98 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1273.0" stylesheets="@../css/style-manager.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeManagerController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" stylesheets="@../css/style-manager.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeManagerController">
    <children>
-      <VBox prefHeight="692.0" prefWidth="300.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="20.0">
-         <children>
-            <Pane prefHeight="151.0" prefWidth="375.0">
-               <children>
-                  <Pane prefHeight="110.0" prefWidth="300.0" style="-fx-background-color: #2A1C42;">
-                     <children>
-                        <ImageView fitHeight="54.0" fitWidth="50.0" layoutX="63.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/logo.png" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="119.0" layoutY="41.0" prefHeight="50.0" prefWidth="117.0" text="VietFood" textFill="WHITE">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </Pane>
-               </children>
-            </Pane>
-            <Button fx:id="btnBanDatManager" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#navigationBar" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Quản lý bàn đặt" textFill="WHITE">
-               <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" size="32" />
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnBanAnManager" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#navigationBar" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Quản lý bàn ăn" textFill="WHITE">
-               <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="BOOKMARK" size="32" />
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnMonAnManager" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#navigationBar" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Quản lý món ăn" textFill="WHITE">
-               <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="CUTLERY" size="32" />
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>     
-            <Button fx:id="btnDatBanKhachVangLai" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#datBanKhachVangLai" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Đặt bàn cho khách vãng lai" textFill="WHITE" wrapText="true">
-               <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" size="32" />
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnSignOut" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#signOut" prefHeight="62.0" prefWidth="300.0" stylesheets="@../css/style-left.css" text="Đăng xuất" textFill="WHITE">
-               <graphic>
-                  <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="32" />
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
       <fx:include fx:id="banDat" source="BanDatManager.fxml" />
       <fx:include fx:id="banAn" source="BanAnManager.fxml" />
       <fx:include fx:id="monAn" source="MonAnManager.fxml" />
@@ -151,6 +66,11 @@
                <items>
                   <MenuItem fx:id="menuTKDTBanDatTheoNgay" mnemonicParsing="false" onAction="#menuThongKe" text="Thống kê doanh thu bàn đặt theo ngày" />
                </items>
+            </Menu>
+            <Menu mnemonicParsing="false">
+               <graphic>
+                  <Label fx:id="lblMenuThoat" onMouseClicked="#signOut" text="Đăng xuất" />
+               </graphic>
             </Menu>
         </menus>
       </MenuBar>
